# python-backend-project

./: .flake8  LICENSE  Makefile  README.md  pyproject.toml
src/: app_logging.py  router.py  uow.py
src/app/: application.py  components.py  factory.py  main.py  services.py
src/config/: base.py  models.py  service.py
src/database/: alembic.ini  base.py  client.py  models.py  operations.py  route_dependencies.py  sql_base.py  type.py  uow.py
src/item/: models.py  repository.py  route_dependencies.py  routes.py  schema.py
